apply plugin: 'com.android.application'

android {
	compileSdkVersion 33
	buildToolsVersion '33.0.1'
	defaultConfig {
		applicationId 'mgks.os.swv'
		minSdkVersion 21
		targetSdkVersion 33
		versionCode 3
		versionName 'p_0.3'
		multiDexEnabled true
	}
	buildTypes {
		release {
			minifyEnabled false
			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
		}
	}
	productFlavors {
	}
	compileOptions {
		sourceCompatibility JavaVersion.VERSION_11
		targetCompatibility JavaVersion.VERSION_11
	}
    namespace 'mgks.os.swv'
}

dependencies {
	testImplementation 'junit:junit:4.13.2'
	androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

	implementation fileTree(include: ['*.jar'], dir: 'libs')

	implementation 'androidx.multidex:multidex:2.0.1'

	//implementation platform('com.google.firebase:firebase-bom:26.0.0')
	implementation 'com.google.firebase:firebase-core:21.1.1'
	implementation 'com.google.firebase:firebase-auth:21.1.0'
	implementation 'com.google.firebase:firebase-config:21.2.0'
	implementation 'com.google.firebase:firebase-appindexing:20.0.0'
	implementation 'com.google.firebase:firebase-messaging:23.1.1'
	implementation 'com.google.firebase:firebase-iid:21.1.0'
	implementation 'com.google.firebase:firebase-analytics:21.2.0'

	implementation 'com.google.android.material:material:1.8.0-rc01'
	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
	implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
	implementation 'androidx.appcompat:appcompat:1.6.0'
	implementation 'androidx.browser:browser:1.4.0'
	implementation 'androidx.work:work-runtime:2.7.1'

    implementation 'com.google.android.gms:play-services-auth:20.4.0'
	implementation 'com.google.android.gms:play-services-ads:21.4.0'
	implementation 'com.google.android.gms:play-services-location:21.0.1'
}

apply plugin: 'com.google.gms.google-services'
